# agate

./: .clang-format  .gitignore  CMakeLists.txt  README.md  agateConfig.cmake.in  getTargetArch.cmake  library.cpp  library.h
example/cxx_wrappers/: async.hpp
example/fibers/: main.cpp
include/: agate.h  agate2.h  agate_module.h  agate_old.h  agate_static.h
include/agate/: agents.h  async.h  channels.h  core.h  exec.h  executor.h  fiber.h  hazptr.h  init.h  log.h  methods.h  naming.h  network.h  pool.h  shmem.h  signal.h  task.h  thread.h  timer.h  uexec.h
src/: agate.cpp  agate_spec.json  config.cpp  config.hpp  debug.hpp  dummy.cpp  dummy_module.cpp  export_table.hpp  fwd.hpp  init.hpp  module_fwd.hpp
src/agate/: agate.cpp  align.hpp  allocator.hpp  atomic.cpp  atomic.hpp  atomicutils.hpp  cast.hpp  codex.cpp  codex.hpp  dictionary.cpp  dictionary.hpp  dllexport.hpp  dynamic_code.cpp  dynamic_code.hpp  environment.hpp  epoch_ptr.hpp  epoch_tracker.hpp  export_table.hpp  flags.hpp  integer_division.hpp  iterator.hpp  key_info.hpp  list.hpp  locked_pointer.hpp  map.hpp  memutils.hpp  module.cpp  module.hpp  on_scope_exit.hpp  parse.hpp  pool.hpp  priority_queue.hpp  processor.cpp  processor.hpp  ptrset.hpp  set.hpp  simdstring.hpp  string_pool.hpp  sys_string.hpp  tagged_value.hpp  (+9 more)
src/agents/: agents.cpp  agents.hpp  dispatch.cpp  executor.cpp  executor.hpp  send.cpp  state.hpp
src/async/: async.cpp  async.hpp  signal.cpp  signal.hpp
src/channels/: broadcast_queue.cpp  broadcast_queue.hpp  channel.hpp  channels.cpp  message.cpp  message.hpp  message_pool.cpp  message_queue.cpp  message_queue.hpp  receiver.hpp  sender.hpp
src/context/: context.cpp  context.hpp  error.hpp  init.cpp  init.hpp  ipc_block.hpp  random.hpp  segment.cpp  segment.hpp  shared.cpp  shared.hpp
src/core/: context.cpp  context.hpp  error.cpp  init.cpp  ipc_block.hpp  object.hpp  object_allocator.cpp  object_pool.cpp  object_pool.hpp  objects.cpp  objects.hpp  rc.hpp  rcmem.cpp  rcpool.cpp  rcpool.hpp  rcweak.cpp  shared.cpp  shared_cache.hpp  thread_state.cpp  thread_state.hpp  vtable.cpp  vtable.hpp
src/messages/: message.cpp  message.hpp  message_pool.cpp  message_pool.hpp
src/modules/: config_options.hpp  module_exports.hpp
src/modules/agents/: agents.cpp  agents.hpp  dispatch.cpp  executor.cpp  executor.hpp  send.cpp  state.cpp  state.hpp  type.hpp
src/modules/async/: async.cpp  async.hpp  exports.cpp  fwd_decl.hpp  signal.cpp  signal.hpp  wait.cpp
src/modules/channels/: channel.hpp  channels.cpp  message.cpp  message.hpp  message_pool.hpp  message_queue.cpp  message_queue.hpp  receiver.cpp  receiver.hpp  ring_queue.cpp  ring_queue.hpp  sender.hpp
src/modules/core/: agents.cpp  agents.hpp  async.cpp  async.hpp  attr.hpp  channels.cpp  context.cpp  core_local.cpp  core_shared.cpp  ctx.cpp  ctx.hpp  dep_object_allocator.cpp  dep_object_pool.hpp  dep_rc.hpp  dep_rcpool.hpp  error.cpp  error.hpp  exec.hpp  exports.cpp  exports.hpp  fiber.cpp  fiber.hpp  hazptr.cpp  hazptr.hpp  init.cpp  init.hpp  instance.cpp  instance.hpp  object.hpp  object_allocator.cpp  object_pool.hpp  random.cpp  random.hpp  rc.hpp  rcmem.cpp  rcpool.cpp  rcpool.hpp  rcweak.cpp  ref.hpp  segment.cpp  (+15 more)
src/modules/core/asm/: x64_nt_gas-afiber_fork.asm  x64_nt_gas-afiber_init.asm  x64_nt_gas-afiber_jump.asm  x64_nt_gas-afiber_loop.asm  x64_nt_gas-afiber_switch.asm  x64_nt_masm-afiber_fork.asm  x64_nt_masm-afiber_init.asm  x64_nt_masm-afiber_jump.asm  x64_nt_masm-afiber_loop.asm  x64_nt_masm-afiber_switch.asm
src/modules/core/exec/: equeue.hpp  local_busy_executor.cpp  local_event_executor.cpp
src/modules/core/impl/: allocator.hpp  blocked_queue.cpp  blocked_queue.hpp  ctrie.cpp  ctrie.hpp  dep_pool.hpp  hazptr_def.hpp  hazptr_manager.cpp  hazptr_manager.hpp  monitor_list.cpp  monitor_list.hpp  object_defs.hpp  pool.hpp  registry.hpp  sized_pool.cpp  sized_pool.hpp  spinlock.cpp  spinlock.hpp  spinner.hpp  static_blocks_per_chunk.inl  static_pool_partner_sizes.inl  static_pool_sizes.inl  static_solo_pool_sizes.inl
src/modules/core/msg/: broadcast_queue.hpp  message.cpp  message.hpp  message_pool.cpp  message_pool.hpp  message_queue.cpp  message_queue.hpp  receiver.cpp  receiver.hpp  ring_queue.cpp  ring_queue.hpp  sender.cpp  sender.hpp
src/modules/log/: buffer.hpp  exports.cpp  mt_log.cpp
src/modules/pool/: exports.cpp  mt_rcmem.cpp  st_pool.cpp  st_rcmem.cpp
src/modules/threads/: thread.cpp  thread.hpp
src/support/: align.hpp  allocator.hpp  atomic.cpp  atomic.hpp  atomicutils.hpp  dictionary.cpp  dictionary.hpp  epoch_tracker.hpp  error.hpp  flags.hpp  iterator.hpp  memutils.hpp  pool.hpp  tagged_value.hpp  vector.cpp  vector.hpp  wrapper.hpp
src/threads/: thread.cpp  thread.hpp
test/: agate_test.hpp  module_explorer.cpp  scratch.cpp  thread_id_test.cpp
test/alloc_benchmarks/: alloc-test.h  bitmap-allocators.cpp  main.cpp
test/benchmark/: benchmark_ops.asm  benchmark_utils.cpp  benchmark_utils.hpp  googleMain.cpp  main.cpp
test/catch/: channels.cpp  config.cpp  dll_interface.hpp  fibers.cpp  first_dll.cpp  second_dll.cpp  test_prolog.hpp  third_dll.cpp
test/command_buffers/: main.cpp
test/coro/: main.cpp
test/cpuinfo/: main.cpp
test/ring_benchmark/: main.cpp
